[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/menus/main_menu.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/Main.tres" type="Theme" id=2]
[ext_resource path="res://src/Menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://src/Menu/Settings.tscn" type="PackedScene" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -80.0
margin_right = -110.0
margin_bottom = 140.0
theme = ExtResource( 2 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new" type="Button" parent="Options"]
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
text = "NEW GAME"

[node name="load" type="Button" parent="Options"]
margin_top = 60.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 40 )
text = "LOAD GAME"

[node name="settings" type="Button" parent="Options"]
margin_top = 120.0
margin_right = 150.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 40 )
text = "SETTINGS"

[node name="quit" type="Button" parent="Options"]
margin_top = 180.0
margin_right = 150.0
margin_bottom = 220.0
rect_min_size = Vector2( 150, 40 )
text = "QUIT"

[node name="Settings" parent="." instance=ExtResource( 4 )]
visible = false

[node name="version" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 20 )
text = "v0.0.1 Demo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -20.0
rect_min_size = Vector2( 112, 20 )
text = "by Jack Anderson"
align = 1
valign = 1

[connection signal="pressed" from="Options/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Options/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Options/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Options/quit" to="." method="_on_quit_pressed"]
